@@ -12,6 +12,7 @@ import uk.gov.hmcts.cmc.claimstore.events.BulkPrintTransferEvent;
 import uk.gov.hmcts.cmc.claimstore.events.DocumentReadyToPrintEvent;
 import uk.gov.hmcts.cmc.domain.models.Claim;
 import uk.gov.hmcts.cmc.domain.models.bulkprint.BulkPrintDetails;
+import uk.gov.hmcts.cmc.launchdarkly.LaunchDarklyClient;
 import uk.gov.hmcts.reform.sendletter.api.Document;
 
 import java.time.LocalDate;
@@ -25,6 +26,9 @@ import static uk.gov.hmcts.cmc.claimstore.utils.DocumentNameUtils.buildCoverShee
 import static uk.gov.hmcts.cmc.claimstore.utils.DocumentNameUtils.buildDefendantLetterFileBaseName;
 import static uk.gov.hmcts.cmc.claimstore.utils.DocumentNameUtils.buildDirectionsOrderFileBaseName;
 import static uk.gov.hmcts.cmc.claimstore.utils.DocumentNameUtils.buildLetterFileBaseName;
+import static uk.gov.hmcts.cmc.claimstore.utils.DocumentNameUtils.buildOcon9FormFileBaseName;
+import static uk.gov.hmcts.cmc.claimstore.utils.DocumentNameUtils.buildOconFormFileBaseName;
+import static uk.gov.hmcts.cmc.claimstore.utils.DocumentNameUtils.buildPaperDefenceCoverLetterFileBaseName;
 import static uk.gov.hmcts.cmc.claimstore.utils.DocumentNameUtils.buildSealedClaimFileBaseName;
 
 @Component
@@ -32,29 +36,43 @@ import static uk.gov.hmcts.cmc.claimstore.utils.DocumentNameUtils.buildSealedCla
 public class BulkPrintHandler {
 
     private final PrintService bulkPrintService;
+    private final LaunchDarklyClient launchDarklyClient;
 
     @Autowired
-    public BulkPrintHandler(PrintService bulkPrintService) {
+    public BulkPrintHandler(PrintService bulkPrintService,
+                            LaunchDarklyClient launchDarklyClient) {
         this.bulkPrintService = bulkPrintService;
+        this.launchDarklyClient = launchDarklyClient;
     }
 
     @EventListener
     public BulkPrintDetails print(DocumentReadyToPrintEvent event) {
         requireNonNull(event);
-        Claim claim = event.getClaim();
-        return bulkPrintService.printHtmlLetter(
-            claim,
-            ImmutableList.of(
+        var claim = event.getClaim();
+        BulkPrintDetails bulkPrintDetails;
+        if (launchDarklyClient.isFeatureEnabled("new-defendant-pin-letter", LaunchDarklyClient.CLAIM_STORE_USER)) {
+            bulkPrintDetails = bulkPrintService.printPdf(claim, List.of(
                 new PrintableTemplate(
                     event.getDefendantLetterDocument(),
                     buildDefendantLetterFileBaseName(claim.getReferenceNumber())),
                 new PrintableTemplate(
                     event.getSealedClaimDocument(),
                     buildSealedClaimFileBaseName(claim.getReferenceNumber()))
-            ),
-            BulkPrintRequestType.FIRST_CONTACT_LETTER_TYPE,
-            event.getAuthorisation()
-        );
+                ),
+                BulkPrintRequestType.FIRST_CONTACT_LETTER_TYPE,
+                event.getAuthorisation()
+            );
+        } else {
+            bulkPrintDetails = bulkPrintService.printHtmlLetter(claim, List.of(
+                new PrintableTemplate(
+                    event.getDefendantLetterDocument(),
+                    buildDefendantLetterFileBaseName(claim.getReferenceNumber())),
+                new PrintableTemplate(
+                    event.getSealedClaimDocument(),
+                    buildSealedClaimFileBaseName(claim.getReferenceNumber()))
+            ), BulkPrintRequestType.FIRST_CONTACT_LETTER_TYPE, event.getAuthorisation());
+        }
+        return bulkPrintDetails;
     }
 
     public BulkPrintDetails printDirectionOrder(Claim claim, Document coverSheet,
@@ -65,7 +83,7 @@ public class BulkPrintHandler {
         requireNonNull(authorisation);
         return bulkPrintService.printPdf(
             claim,
-            ImmutableList.of(
+            List.of(
                 new PrintableTemplate(
                     coverSheet,
                     buildCoverSheetFileBaseName(claim.getReferenceNumber())),
@@ -85,7 +103,7 @@ public class BulkPrintHandler {
 
         return bulkPrintService.printPdf(
             claim,
-            ImmutableList.of(
+            List.of(
                 new PrintablePdf(
                     generalLetterDocument,
                     buildLetterFileBaseName(claim.getReferenceNumber(),
@@ -105,7 +123,7 @@ public class BulkPrintHandler {
         requireNonNull(authorisation);
         requireNonNull(caseDocuments);
 
-        PrintablePdf coverLetterPrint = new PrintablePdf(
+        var coverLetterPrint = new PrintablePdf(
             coverLetter,
             buildCoverSheetFileBaseName(claim.getReferenceNumber()));
 
@@ -118,5 +136,67 @@ public class BulkPrintHandler {
 
         return bulkPrintService.printPdf(claim, Collections.unmodifiableList(printableDocs),
             BulkPrintRequestType.BULK_PRINT_TRANSFER_TYPE, authorisation);
+    }
+
+    public BulkPrintDetails printPaperDefence(Claim claim, Document coverLetter, Document oconForm,
+                                              String authorisation) {
+        requireNonNull(claim);
+        requireNonNull(coverLetter);
+        requireNonNull(authorisation);
+        requireNonNull(oconForm);
+
+        return bulkPrintService.printPdf(claim,
+            ImmutableList.<Printable>builder()
+                .add(new PrintablePdf(
+                    coverLetter,
+                    buildPaperDefenceCoverLetterFileBaseName(claim.getReferenceNumber())))
+                .add(new PrintablePdf(
+                    oconForm,
+                    buildOconFormFileBaseName(claim.getReferenceNumber())))
+                .build(),
+            BulkPrintRequestType.GENERAL_LETTER_TYPE,
+            authorisation);
+    }
+
+    public BulkPrintDetails printPaperDefence(Claim claim, Document coverLetter, Document oconForm, Document ocon9Form,
+                                              String authorisation, boolean disableN9Form) {
+        requireNonNull(claim);
+        requireNonNull(coverLetter);
+        requireNonNull(authorisation);
+        requireNonNull(oconForm);
+        ImmutableList<Printable> documents;
+        documents = getPrintables(claim, coverLetter, oconForm, ocon9Form, disableN9Form);
+        return bulkPrintService.printPdf(claim,
+            documents,
+            BulkPrintRequestType.GENERAL_LETTER_TYPE,
+            authorisation);
+    }
+
+    private ImmutableList<Printable> getPrintables(Claim claim, Document coverLetter, Document oconForm,
+                                                   Document ocon9Form, boolean disableN9Form) {
+        ImmutableList<Printable> documents;
+        if (disableN9Form) {
+            documents = ImmutableList.<Printable>builder()
+                .add(new PrintablePdf(
+                    coverLetter,
+                    buildPaperDefenceCoverLetterFileBaseName(claim.getReferenceNumber())))
+                .add(new PrintablePdf(
+                    oconForm,
+                    buildOconFormFileBaseName(claim.getReferenceNumber())))
+                .build();
+        } else {
+            documents = ImmutableList.<Printable>builder()
+                .add(new PrintablePdf(
+                    coverLetter,
+                    buildPaperDefenceCoverLetterFileBaseName(claim.getReferenceNumber())))
+                .add(new PrintablePdf(
+                    ocon9Form,
+                    buildOcon9FormFileBaseName(claim.getReferenceNumber())))
+                .add(new PrintablePdf(
+                    oconForm,
+                    buildOconFormFileBaseName(claim.getReferenceNumber())))
+                .build();
+        }
+        return documents;
     }
 }
