@@ -15,10 +15,14 @@ import uk.gov.hmcts.cmc.domain.models.Claim;
 import uk.gov.hmcts.cmc.domain.models.ClaimSubmissionOperationIndicators;
 import uk.gov.hmcts.cmc.domain.models.bulkprint.BulkPrintDetails;
 import uk.gov.hmcts.cmc.domain.models.response.YesNoOption;
+import uk.gov.hmcts.cmc.launchdarkly.LaunchDarklyClient;
+
+import java.util.List;
 
 import static uk.gov.hmcts.cmc.ccd.domain.CaseEvent.ADD_BULK_PRINT_DETAILS;
 import static uk.gov.hmcts.cmc.claimstore.utils.DocumentNameUtils.buildDefendantLetterFileBaseName;
 import static uk.gov.hmcts.cmc.claimstore.utils.DocumentNameUtils.buildSealedClaimFileBaseName;
+import static uk.gov.hmcts.cmc.domain.models.ClaimState.HWF_APPLICATION_PENDING;
 import static uk.gov.hmcts.cmc.domain.models.response.YesNoOption.NO;
 
 @Service
@@ -30,6 +34,7 @@ public class PinOrchestrationService {
     private final ClaimCreationEventsStatusService eventsStatusService;
     private final PrintService bulkPrintService;
     private final ClaimIssuedStaffNotificationService claimIssuedStaffNotificationService;
+    private final LaunchDarklyClient launchDarklyClient;
 
     public PinOrchestrationService(
         PrintService bulkPrintService,
@@ -38,7 +43,8 @@ public class PinOrchestrationService {
         NotificationsProperties notificationsProperties,
         ClaimCreationEventsStatusService eventsStatusService,
         DocumentOrchestrationService documentOrchestrationService,
-        ClaimService claimService
+        ClaimService claimService,
+        LaunchDarklyClient launchDarklyClient
     ) {
         this.bulkPrintService = bulkPrintService;
         this.claimIssuedStaffNotificationService = claimIssuedStaffNotificationService;
@@ -47,11 +53,15 @@ public class PinOrchestrationService {
         this.eventsStatusService = eventsStatusService;
         this.documentOrchestrationService = documentOrchestrationService;
         this.claimService = claimService;
+        this.launchDarklyClient = launchDarklyClient;
     }
 
     @LogExecutionTime
     public Claim process(Claim claim, String authorisation, String submitterName) {
-        GeneratedDocuments documents = documentOrchestrationService.generateForCitizen(claim, authorisation);
+        boolean newPinLetterEnabled = launchDarklyClient.isFeatureEnabled("new-defendant-pin-letter",
+            LaunchDarklyClient.CLAIM_STORE_USER);
+        GeneratedDocuments documents = documentOrchestrationService.generateForCitizen(claim, authorisation,
+            newPinLetterEnabled);
         Claim updatedClaim = documents.getClaim();
 
         ClaimSubmissionOperationIndicators.ClaimSubmissionOperationIndicatorsBuilder updatedOperationIndicator =
@@ -61,18 +71,35 @@ public class PinOrchestrationService {
                 .defendantNotification(NO);
 
         try {
-            BulkPrintDetails bulkPrintDetails = bulkPrintService.printHtmlLetter(
-                updatedClaim,
-                ImmutableList.of(
-                    new PrintableTemplate(
-                        documents.getDefendantPinLetterDoc(),
-                        buildDefendantLetterFileBaseName(claim.getReferenceNumber())),
-                    new PrintableTemplate(
-                        documents.getSealedClaimDoc(),
-                        buildSealedClaimFileBaseName(claim.getReferenceNumber()))),
-                BulkPrintRequestType.FIRST_CONTACT_LETTER_TYPE,
-                authorisation
-            );
+            BulkPrintDetails bulkPrintDetails;
+            if (newPinLetterEnabled) {
+                bulkPrintDetails = bulkPrintService.printPdf(
+                    updatedClaim,
+                    List.of(
+                        new PrintableTemplate(
+                            documents.getDefendantPinLetterDoc(),
+                            buildDefendantLetterFileBaseName(claim.getReferenceNumber())),
+                        new PrintableTemplate(
+                            documents.getSealedClaimDoc(),
+                            buildSealedClaimFileBaseName(claim.getReferenceNumber()))),
+                    BulkPrintRequestType.FIRST_CONTACT_LETTER_TYPE,
+                    authorisation
+                );
+            } else {
+                bulkPrintDetails = bulkPrintService.printHtmlLetter(
+                    updatedClaim,
+                    List.of(
+                        new PrintableTemplate(
+                            documents.getDefendantPinLetterDoc(),
+                            buildDefendantLetterFileBaseName(claim.getReferenceNumber())),
+                        new PrintableTemplate(
+                            documents.getSealedClaimDoc(),
+                            buildSealedClaimFileBaseName(claim.getReferenceNumber()))),
+                    BulkPrintRequestType.FIRST_CONTACT_LETTER_TYPE,
+                    authorisation
+                );
+
+            }
 
             ImmutableList<BulkPrintDetails> printDetails = ImmutableList.<BulkPrintDetails>builder()
                 .addAll(claim.getBulkPrintDetails())
@@ -86,7 +113,7 @@ public class PinOrchestrationService {
 
             claimIssuedStaffNotificationService.notifyStaffOfClaimIssue(
                 updatedClaim,
-                ImmutableList.of(documents.getSealedClaim(), documents.getDefendantPinLetter())
+                List.of(documents.getSealedClaim(), documents.getDefendantPinLetter())
             );
             updatedOperationIndicator.staffNotification(YesNoOption.YES);
 
@@ -101,7 +128,8 @@ public class PinOrchestrationService {
     }
 
     private void notifyDefendant(Claim claim, String submitterName, GeneratedDocuments generatedDocuments) {
-        if (!claim.getClaimData().isClaimantRepresented()) {
+        if (Boolean.FALSE.equals((claim.getClaimData().isClaimantRepresented()))
+            && !(claim.getState().equals(HWF_APPLICATION_PENDING))) {
             claim.getClaimData().getDefendant().getEmail().ifPresent(defendantEmail ->
                 claimIssuedNotificationService.sendMail(
                     claim,
