@@ -1,6 +1,5 @@
 package uk.gov.hmcts.cmc.claimstore.services.ccd.callbacks;
 
-import com.google.common.collect.ImmutableMap;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Service;
@@ -11,16 +10,21 @@ import uk.gov.hmcts.cmc.claimstore.services.ccd.callbacks.roboticssupport.Roboti
 import uk.gov.hmcts.cmc.claimstore.services.ccd.callbacks.roboticssupport.RpaEventType;
 import uk.gov.hmcts.cmc.claimstore.utils.CaseDetailsConverter;
 import uk.gov.hmcts.cmc.domain.exceptions.BadRequestException;
+import uk.gov.hmcts.cmc.domain.models.BreathingSpace;
 import uk.gov.hmcts.cmc.domain.models.Claim;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
 import static uk.gov.hmcts.cmc.claimstore.services.ccd.Role.CASEWORKER;
+import static uk.gov.hmcts.cmc.claimstore.services.ccd.callbacks.roboticssupport.RpaEventType.BREATHING_SPACE_ENTERED;
+import static uk.gov.hmcts.cmc.claimstore.services.ccd.callbacks.roboticssupport.RpaEventType.BREATHING_SPACE_LIFTED;
 
 @Service
 @ConditionalOnProperty("feature_toggles.ctsc_enabled")
@@ -45,7 +49,7 @@ public class ResetRpaCallbackHandler extends CallbackHandler {
 
     @Override
     protected Map<CallbackType, Callback> callbacks() {
-        return ImmutableMap.of(
+        return Map.of(
             CallbackType.ABOUT_TO_SUBMIT, this::requestResetRpa
         );
     }
@@ -61,14 +65,20 @@ public class ResetRpaCallbackHandler extends CallbackHandler {
     }
 
     private AboutToStartOrSubmitCallbackResponse requestResetRpa(CallbackParams callbackParams) {
+        final var responseBuilder = AboutToStartOrSubmitCallbackResponse.builder();
         CallbackRequest callbackRequest = callbackParams.getRequest();
         Claim claim = convertCallbackToClaim(callbackRequest);
-        handleRoboticsNotification(callbackRequest, claim.getReferenceNumber());
-        Map<String, Object> map = new HashMap<>(caseDetailsConverter.convertToMap(caseMapper.to(claim)));
-        AboutToStartOrSubmitCallbackResponse response = AboutToStartOrSubmitCallbackResponse.builder()
-            .data(map)
-            .build();
-        return response;
+        String validationMessage = validateBreathingSpaceEvents(callbackRequest, claim);
+        if (validationMessage != null) {
+            List<String> errors = new ArrayList<>();
+            errors.add(validationMessage);
+            responseBuilder.errors(errors);
+        } else {
+            handleRoboticsNotification(callbackRequest, claim.getReferenceNumber());
+            Map<String, Object> map = new HashMap<>(caseDetailsConverter.convertToMap(caseMapper.to(claim)));
+            responseBuilder.data(map);
+        }
+        return responseBuilder.build();
     }
 
     private Claim convertCallbackToClaim(CallbackRequest callbackRequest) {
@@ -76,7 +86,7 @@ public class ResetRpaCallbackHandler extends CallbackHandler {
     }
 
     private String handleRoboticsNotification(CallbackRequest callbackRequest, String referenceNumber) {
-        switch (RpaEventType.fromValue((String)(callbackRequest.getCaseDetails()
+        switch (RpaEventType.fromValue((String) (callbackRequest.getCaseDetails()
             .getData().get(RPA_EVENT_TYPE)))) {
             case CLAIM:
                 return roboticsNotificationService.rpaClaimNotification(referenceNumber);
@@ -88,8 +98,33 @@ public class ResetRpaCallbackHandler extends CallbackHandler {
                 return roboticsNotificationService.rpaResponseNotifications(referenceNumber);
             case PAID_IN_FULL:
                 return roboticsNotificationService.rpaPIFNotifications(referenceNumber);
+            case BREATHING_SPACE_ENTERED:
+                return roboticsNotificationService.rpaEnterBreathingSpaceNotifications(referenceNumber);
+            case BREATHING_SPACE_LIFTED:
+                return roboticsNotificationService.rpaLiftBreathingSpaceNotifications(referenceNumber);
             default:
                 throw new BadRequestException(RPA_STATE_INVALID);
         }
+    }
+
+    private String validateBreathingSpaceEvents(CallbackRequest callbackRequest, Claim claim) {
+
+        if (callbackRequest.getCaseDetails().getData().get(RPA_EVENT_TYPE)
+            .equals(BREATHING_SPACE_ENTERED.name())) {
+            if (!(claim.getClaimData().getBreathingSpace().isPresent())) {
+                return "This claim is still not entered into Breathing space";
+            }
+        } else if (callbackRequest.getCaseDetails().getData().get(RPA_EVENT_TYPE)
+            .equals(BREATHING_SPACE_LIFTED.name())) {
+            Optional<BreathingSpace> breathingSpaceOptional = claim.getClaimData().getBreathingSpace();
+            if ((breathingSpaceOptional.isPresent())) {
+                if (breathingSpaceOptional.get().getBsLiftedFlag().equals("No")) {
+                    return "This claim is still not lifted its Breathing space";
+                }
+            } else {
+                return "This claim is still not entered into Breathing space";
+            }
+        }
+        return null;
     }
 }
