@@ -1,6 +1,5 @@
 package uk.gov.hmcts.cmc.claimstore.services.ccd.callbacks.ioc;
 
-import com.google.common.collect.ImmutableMap;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -63,7 +62,7 @@ public class ResumePaymentCallbackHandler extends CallbackHandler {
 
     @Override
     protected Map<CallbackType, Callback> callbacks() {
-        return ImmutableMap.of(
+        return Map.of(
             CallbackType.ABOUT_TO_SUBMIT, this::resumePayment
         );
     }
@@ -103,7 +102,7 @@ public class ResumePaymentCallbackHandler extends CallbackHandler {
         );
 
         logger.info("Retrieved payment from pay hub with status {}, claim with external id {}",
-            originalPayment.getStatus().toString(),
+            originalPayment.getStatus(),
             claim.getExternalId());
 
         switch (originalPayment.getStatus()) {
